tests/basic/bad/test12.pepa
% File: tests/bad/test11.pepa
% Illegal hiding (of tau)
P = (tau, r).P;
(P <> (P / {tau}))
